# product/src/app/api/sample/route.ts
@@ -3,6 +3,6 @@ import type { NextRequest } from "next/server";
 import { fetchFromApi, toNextResponse } from "../_utils/upstream";
 
 export async function GET(request: NextRequest) {
-  const upstreamResponse = await fetchFromApi("/api/users", request);
+  const upstreamResponse = await fetchFromApi("/api/fizz", request);
   return await toNextResponse(upstreamResponse);
 }
